Fixed dashboard, integrated it iwth backend, fixed geolocation tracking, fixed script
